<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
>

    <TextView
        android:id="@+id/textViewBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TITULO"
        android:textSize="30sp"
        android:layout_marginTop="0dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angulo" />

        <EditText
            android:id="@+id/editTextAngulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ingreseAngulo"
            android:inputType="number"
            android:layout_marginEnd="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lado1" />

        <EditText
            android:id="@+id/editTextLado1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ingreseLado1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lado2"/>

        <EditText
            android:id="@+id/editTextLado2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/ingreseLado2"
            android:inputType="number" />

    </LinearLayout>
        <Button
            android:id="@+id/buttonCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton" />


</LinearLayout>
