<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadosActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultadosActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/resultados"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAngulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTitulo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textViewValorAngulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewAngulo"
            android:layout_toEndOf="@+id/textViewAngulo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCoseno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAngulo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/coseno" />

        <TextView
            android:id="@+id/textViewValorCoseno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewCoseno"
            android:layout_toEndOf="@+id/textViewCoseno"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewSeno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewCoseno"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/seno" />

        <TextView
            android:id="@+id/textViewValorSeno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewSeno"
            android:layout_toEndOf="@+id/textViewSeno"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewSeno"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/area" />

        <TextView
            android:id="@+id/textViewValorArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewArea"
            android:layout_toEndOf="@+id/textViewArea"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewPerimetro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewArea"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/per_metro" />

        <TextView
            android:id="@+id/textViewValorPerimetro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewPerimetro"
            android:layout_toEndOf="@+id/textViewPerimetro"
            android:textSize="18sp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>